[CHART-3005] Remove load / save; it does not belong in this low level canvas, it belongs in the business logic layer above.  Switch from native drag & drop to ibx drag & drop.  Fix canvas selectable & droppable instantiations to only happen once.  Rename add/RemoveNode to just add/remove, to match IBX naming.  Add offset & data props to node, for more accurate positioning & easier data retrieval. Fix canvas's internal SVG z-ordering, so its always above the background but behind node layer.

--- a/src/test/resources/META-INF/resources/ibx/testing/remi/diagram.ibx.css
+++ b/src/test/resources/META-INF/resources/ibx/testing/remi/diagram.ibx.css
@@ -14,7 +14,6 @@
 	position: absolute;
 	left: 0px;
 	top: 0px;
-	z-index: -1;
 	pointer-events: none;
 	fill: none;
 	stroke: black;
